javascript/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: g1w7-ingress
  annotations:
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: myingress
  namespace: group-1s
spec:
  #Ref 
  #- https://kubernetes.github.io/ingress-nginx/examples/rewrite/
  #- https://kubernetes.github.io/ingress-nginx/user-guide/ingress-path-matching/
  ingressClassName: nginx
  rules:
  - host: tcc-01.th1.proen.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/group-1/tcc-1(/|$)(.*)"
        backend:
          service:
            name: g1w7-1-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/group-1/tcc-2(/|$)(.*)"
        backend:
          service:
            name: g1w7-2-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/group-1/tcc-3(/|$)(.*)"
        backend:
          service:
            name: g1w7-3-svc
            port: 
              number: 80
